--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,15 +3,15 @@
     "node": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "extends": ["eslint:recommended"],
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": "latest"
   },
   "rules": {
-    "no-console": "warn",
+    "no-console": "off",
     "no-unused-vars": "warn",
     "prefer-const": "error",
-    "no-var": "error"
+    "no-var": "error",
+    "no-constant-condition": "warn"
   }
 }
