--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "frames.js": "^0.21.3",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
